Fix z-index and class_name

--- a/_sass/includes/_services.scss
+++ b/_sass/includes/_services.scss
@@ -6,13 +6,13 @@
   text-align: center;
 
 
-  .caption {
+  .caption-content {
     position: absolute;
     top: 50%;
     left: 50%;
     text-align: center;
     transform: translate(-50%, -50%);
-
+    z-index: 100;
     &:hover {
       opacity: 1;
     }
